<resources>
    <string name="app_name">Latihan JMP</string>
    <string name="title">Masukkan Dua Angka</string>
    <string name="first_input_hint">Masukkan angka pertama</string>
    <string name="second_input_hint">Masukkan angka kedua</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiple">X</string>
    <string name="divide">/</string>
    <string name="clear">Bersihkan</string>
    <string name="result">Hasil</string>
    <string name="result_value">-----</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_input_hint">Masukan Nama Anda</string>
    <string name="show">Tampilkan</string>
    <string name="to_input_name_page">Halaman nama</string>
    <string name="name_validation">Please enter your name</string>
    <string name="input_nama">Input Nama</string>
    <string name="calculator">Kalkulator</string>
    <string name="excercise_project">Projek Latihan</string>
    <string name="input_name_desc">Form menampilkan nama</string>
    <string name="input_calculator_desc">Kalkulator sederhana untuk menghitung</string>
    <string name="add_feed">Tambah data feed</string>
    <string name="feed">Feed</string>
    <string name="feed_desc">Ada cuitan orang cuy</string>
    <string name="title_input_hint">Masukan Title Anda</string>
    <string name="save">Simpan</string>
    <string name="name_subtitle_hint">Post tweet Anda</string>
    <string name="title_label">Title</string>
    <string name="subtitle_label">Subtitle</string>
    <string name="update">Ubah</string>
    <string name="no_subtitle">No Subtitle</string>
    <string name="no_title">No Title</string>
    <string name="student">Mahasiswa</string>
    <string name="student_desc">Daftar mahasiswa aktif</string>
    <string name="see_data">Lihat Data</string>
    <string name="add_data">Input Data</string>
    <string name="information">Informasi</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_login_page">Login</string>
    <string name="information_desc">Aplikasi ini merupakan aplikasi latihan saja menggunakan Java dalam membuat aplikasi Android dan juga menyelesaikan sertfikasi JMP.</string>
    <string name="nrp_input_hint">Masukkan NRP</string>
    <string name="name_hint">Masukkan Nama</string>
    <string name="address_hint">Masukkan Alamat</string>
    <string name="gender_hint">Masukkan Jenis Kelamin</string>
    <string name="birth_hint">Masukkan Tanggal Lahir</string>
</resources>